--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
----
-layout: home
-# Index page
----
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://blog.puvvadi.me/abou</title>
+<meta http-equiv="refresh" content="0; URL=https://blog.puvvadi.me/about">
+<link rel="canonical" href="https://blog.puvvadi.me/abou">
